removing scss module and trying .scss only for css and individual product page is rendered

--- a/src/components/Featured/Featured.scss
+++ b/src/components/Featured/Featured.scss
@@ -14,3 +14,9 @@
     display: none;
   }
 }
+.carousel .carousel-indicators li {
+  background-color: gray;
+}
+.carousel .carousel-indicators li.active {
+  background-color: var(--primary);
+}
