Dynamic featured product added

--- a/src/components/Featured/Featured.scss
+++ b/src/components/Featured/Featured.scss
@@ -14,9 +14,7 @@
     display: none;
   }
 }
-.carousel .carousel-indicators li {
-  background-color: gray;
-}
-.carousel .carousel-indicators li.active {
-  background-color: var(--primary);
+.carousel-control-next,
+.carousel-control-prev /*, .carousel-indicators */ {
+  filter: invert(100%);
 }
