header color changes

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,6 +1,6 @@
 .Footer {
   color: white;
-  background-color: #db1d24;
+  background-color: #c21117;
   height: 40px;
   display: flex;
   justify-content: center;
